# docs/swagger.json
@@ -3,13 +3,21 @@
     "info": {
         "description": "Esta es una API para subir, transformar y consultar imágenes.",
         "title": "API de Procesamiento de Imágenes",
-        "contact": {},
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "Soporte API",
+            "email": "soporte@example.com"
+        },
+        "license": {
+            "name": "MIT",
+            "url": "https://opensource.org/licenses/MIT"
+        },
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/image/{id}": {
+        "/images/{id}": {
             "get": {
                 "security": [
                     {
@@ -580,6 +588,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Escribe \"Bearer \" seguido del token JWT obtenido en /login",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
